Исправление количества колонок и курсива.

--- a/занятие 4/index.html
+++ b/занятие 4/index.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="ru">
 
 <head>
     <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet'>
@@ -100,7 +100,7 @@
             <td></td>
         </tr>
         <tr>
-            <td colspan="6" style="text-align:left">Вот так</td>
+            <td colspan="5" style="text-align:left">Вот так</td>
         </tr>
     </table>
 </body>
