--- a/занятие 7/index.html
+++ b/занятие 7/index.html
@@ -9,44 +9,77 @@
 </head>
 
 <body>
-    <div style='background-image:url(images/bg-1.jpg)'>
-        <span id='start' style="color: rgb(255, 215, 0)">Добро пожаловать!</span>
-        <p style="color: white">
+    <div class="fon1">
+        <span class="hello" id='start'>Добро пожаловать!</span>
+        <p class="text1">
             Далеко-далеко за словесными, горами в стране гласных и согласных живут рыбные тексты. Взобравшись, рукописи
             текста. Силуэт, свой. Путь последний прямо там всеми составитель переписывается ему продолжил, текст все
             вопрос. Проектах, рукописи, продолжил деревни родного рот, бросил великий подпоясал мир рукопись о образ
             точках запятых власти безопасную страна!
         </p>
-        <span style="color:rgb(173, 216, 230);text-decoration: underline;font-size:1.7em">
+        <span class="dalee1">
             <a href="#firstpage">Далее</a>
         </span>
     </div>
 
-    <div style='background-image:url(images/bg-2.jpg)'>
-        <span id='firstpage' style='color: rgb(184, 134, 11)'>Страница первая</span>
+    <div class="fon2">
+        <span class="page1" id='firstpage'>Страница первая</span>
         <p>
             Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Взобравшись взгляд
             рыбного строчка мир над, грустный послушавшись дороге ручеек, единственное сих прямо это пояс ему инициал
             парадигматическая, назад встретил необходимыми. Толку осталось вопроса всеми города, использовало домах,
             взгляд рот назад букв грустный рыбного до.
         </p>
-        <span style='font-size:1.7em;text-decoration: underline;color:rgb(85, 107, 47)'>
+        <span class="nazad1">
             <a href="#start">Назад</a>
         </span>
-        <span style='font-size:1.7em;text-decoration: underline;color:rgb(85, 107, 47)'>
+        <span class="fe">jh</span>
+        <span class="dalee2">
             <a href="#thirdpage">Далее</a>
         </span>
+        <div class="table">
+            <table>
+                <tr>
+                <th colspan="3">Таблица истинности для конъюнкции</th>
+                </tr>
+                <tr>
+                    <th>A</th>
+                    <th>B</th>
+                    <th>F</th>
+                </tr>
+                <tr>
+                    <th>1</th>
+                    <th>1</th>
+                    <th>1</th>
+                </tr>
+                <tr>
+                    <th>1</th>
+                    <th>0</th>
+                    <th>0</th>
+                </tr>
+                <tr>
+                    <th>0</th>
+                    <th>1</th>
+                    <th>0</th>
+                </tr>
+                <tr>
+                    <th>0</th>
+                    <th>0</th>
+                    <th>0</th>
+                </tr>
+            </table>
+        </div>
     </div>
-
-    <div style='background-image:url(images/bg-3.jpg)'>
-        <span id="thirdpage" style='color: rgb(255, 215, 0);text-align: center'>Страница третья</span>
-        <p style='text-align: center'>
+    <div class=fon3>
+        <span class="page3" id="thirdpage">Страница третья</span>
+        <p class="img">
             <img src="images/master.png" alt="masterstars">
         </p>
-        <span style='font-size:1.7em;color: rgb(128, 128, 0);text-decoration: underline'>
+        <span class="nazad2">
             <a href="#firstpage">Назад</a>
         </span>
-        <span style='font-size:1.7em;color: rgb(128, 128, 0);text-decoration: underline'>
+        <span class="fe">jh</span>
+        <span class="vnachalo">
             <a href="#start">В начало</a>
         </span>
     </div>
