Занятие 12. Пункты и подпункты в меню.

--- a/занятие 11/index.html
+++ b/занятие 11/index.html
@@ -12,8 +12,25 @@
     <div class="menu">
         <ul>
             <li class="main"><a href="">Главная</a></li>
-            <li><a href="#block1">Блок 1</a></li>
-            <li><a href="#block2">Блок 2</a></li>
+            <li><a href="#block1">Блок 1</a>
+                <ul class="lvl2">
+                    <li><a href="">Пункт1.1</a></li>
+                    <li><a href="">Пункт1.2</a></li>
+                </ul>
+            </li>
+            <li><a href="#block2">Блок 2</a>
+                <ul class="lvl2">
+                    <li><a href="">Пункт2.1</a></li>
+                    <li><a href="">Пункт2.2</a></li> 
+                    <li><a href="">Пункт2.3</a>
+                        <ul class="lvl3">
+                            <li><a href="">Пункт2.3.1</a></li>
+                            <li><a href="">Пункт2.3.2</a></li> 
+                        </ul>
+                    </li> 
+                    <li><a href="">Пункт2.4</a></li> 
+                </ul>
+            </li>
             <li><a href="#block3">Блок 3</a></li>
         </ul>
     </div>
